--- a/test/unittest/lifecycle_test/BUILD.gn
+++ b/test/unittest/lifecycle_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -20,52 +20,39 @@ ohos_unittest("lifecycle_test") {
   module_out_path = module_output_path
 
   include_dirs = [
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
-    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
+    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/include",
+    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit/include",
   ]
 
-  sources = [
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
-    "lifecycle_test.cpp",  # add mock file
-  ]
+  sources = [ "lifecycle_test.cpp" ]
 
-  configs = [
-    "${ability_runtime_services_path}/abilitymgr:abilityms_config",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test:aafwk_mock_config",
-  ]
-  cflags = []
-  if (target_cpu == "arm") {
-    cflags += [ "-DBINDER_IPC_32BIT" ]
-  }
+  configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
+
   deps = [
-    "${ability_runtime_innerkits_path}/ability_manager:ability_start_setting",
-    "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:perm_verification",
-    "${ability_runtime_services_path}/common:task_handler_wrap",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit:aakit_mock",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core:appexecfwk_appmgr_mock",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core:appexecfwk_bundlemgr_mock",
-    "${ability_runtime_test_path}/unittest:abilityms_test_source",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
   ]
 
   external_deps = [
+    "ability_base:session_info",
     "ability_base:want",
-    "ability_base:zuri",
-    "access_token:libaccesstoken_sdk",
+    "ability_runtime:ability_deps_wrapper",
+    "ability_runtime:app_manager",
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "ffrt:libffrt",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "napi:ace_napi",
+    "window_manager:scene_session",
   ]
 
-  if (background_task_mgr_continuous_task_enable) {
-    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
 
   if (ecologic_rule_enabled) {
@@ -75,5 +62,6 @@ ohos_unittest("lifecycle_test") {
 
 group("unittest") {
   testonly = true
+
   deps = [ ":lifecycle_test" ]
 }
