--- a/frameworks/simulator/ability_simulator/BUILD.gn
+++ b/frameworks/simulator/ability_simulator/BUILD.gn
@@ -74,11 +74,13 @@ ohos_shared_library("ability_simulator") {
       "${ability_runtime_native_path}/runtime/js_module_searcher.cpp",
       "src/ability_context.cpp",
       "src/ability_stage_context.cpp",
+      "src/common_func.cpp",
       "src/js_ability_context.cpp",
       "src/js_ability_stage_context.cpp",
       "src/js_application_context_utils.cpp",
       "src/js_console_log.cpp",
       "src/js_context_utils.cpp",
+      "src/js_data_converter.cpp",
       "src/js_resource_manager_utils.cpp",
       "src/js_runtime_utils.cpp",
       "src/js_timer.cpp",
@@ -93,10 +95,7 @@ ohos_shared_library("ability_simulator") {
 
     configs = [ "${windowmanager_path}/previewer:previewer_window_config" ]
 
-    deps = [
-      ":gen_obj_src_js_mock_abc",
-      "${simulator_path}/common:ability_simulator_common",
-    ]
+    deps = [ ":gen_obj_src_js_mock_abc" ]
 
     external_deps = [
       "ability_base:string_utils",
