--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -850,9 +850,11 @@ ohos_shared_library("action_extension") {
   external_deps = [
     "ability_base:want",
     "c_utils:utils",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
     "ipc:ipc_napi_common",
+    "napi:ace_napi",
   ]
 
   subsystem_name = "ability"
