--- a/test/moduletest/on_new_want_module_test/BUILD.gn
+++ b/test/moduletest/on_new_want_module_test/BUILD.gn
@@ -18,109 +18,41 @@ module_output_path = "ability_runtime/mstabilitymgrservice"
 
 ohos_moduletest("on_new_want_module_test") {
   module_out_path = module_output_path
-  cflags_cc = []
-  include_dirs = [
-    "${ability_runtime_test_path}/moduletest/mock/include",
-    "//third_party/jsoncpp/include",
-    "${ability_runtime_path}/interfaces/kits/native/ability/native/distributed_ability_runtime",
-    "${ability_runtime_innerkits_path}/dataobs_manager/include",
-    "${ability_runtime_innerkits_path}/deps_wrapper/include",
-  ]
+
+  include_dirs = [ "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/include" ]
 
   sources = [ "on_new_want_module_test.cpp" ]
-  sources += [
-    "${ability_runtime_services_path}/abilitymgr/src/ability_bundle_event_callback.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/ability_event_util.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/app_exit_reason_data_manager.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/scene_board/ui_ability_lifecycle_manager.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler/start_ability_sandbox_savefile.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/window_focus_changed_listener.cpp",
-    "${device_manager_path}/test/unittest/mock/parameter.cpp",
-  ]
 
-  configs = [ "${ability_runtime_innerkits_path}/ability_manager:ability_manager_public_config" ]
-  cflags = []
-  if (target_cpu == "arm") {
-    cflags += [ "-DBINDER_IPC_32BIT" ]
-  }
+  configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
+
   deps = [
-    "${ability_runtime_innerkits_path}/ability_manager:ability_start_setting",
-    "${ability_runtime_innerkits_path}/app_manager:app_manager",
-    "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
-    "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
-    "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
-    "${ability_runtime_services_path}/common:task_handler_wrap",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
-    "//third_party/icu/icu4c:shared_icuuc",
-    "//third_party/jsoncpp:jsoncpp",
   ]
 
-  if (ability_runtime_graphics) {
-    deps += [
-      "${ace_engine_path}/interfaces/inner_api/ui_service_manager:ui_service_mgr",
-      "${global_path}/i18n/frameworks/intl:intl_util",
-      "${multimedia_path}/interfaces/innerkits:image_native",
-    ]
-  }
-
   external_deps = [
+    "ability_base:session_info",
     "ability_base:want",
-    "ability_base:zuri",
     "ability_runtime:ability_deps_wrapper",
-    "ability_runtime:ability_manager",
-    "access_token:libaccesstoken_sdk",
+    "ability_runtime:app_manager",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
-    "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dsoftbus:softbus_client",
     "ffrt:libffrt",
-    "hicollie:libhicollie",
     "hilog:libhilog",
-    "hisysevent:libhisysevent",
-    "hitrace:hitrace_meter",
-    "init:libbegetutil",
     "ipc:ipc_core",
-    "kv_store:distributeddata_inner",
-    "napi:ace_napi",
-    "relational_store:native_appdatafwk",
-    "relational_store:native_dataability",
-    "relational_store:native_rdb",
-    "safwk:system_ability_fwk",
-    "samgr:samgr_proxy",
-    "window_manager:libwsutils",
-    "window_manager:sms",
+    "window_manager:scene_session",
   ]
 
-  if (efficiency_manager) {
-    cflags_cc += [ "-DEFFICIENCY_MANAGER_ENABLE" ]
-    external_deps += [ "efficiency_manager:suspend_manager_client" ]
-  }
-
-  if (resource_schedule_service_enable) {
-    cflags_cc += [ "-RESOURCE_SCHEDULE_SERVICE_ENABLE" ]
-    external_deps += [ "resource_schedule_service:ressched_client" ]
-  }
-
-  if (background_task_mgr_continuous_task_enable) {
-    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
-  }
-
-  if (ability_runtime_graphics) {
-    external_deps += [
-      "input:libmmi-client",
-      "window_manager:libdm",
-    ]
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
 }
 
 group("moduletest") {
   testonly = true
-
   deps = [ ":on_new_want_module_test" ]
 }
