--- a/test/unittest/ability_manager_service_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_test/BUILD.gn
@@ -16,88 +16,51 @@ import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
 module_output_path = "ability_runtime/abilitymgr"
 
-config("abilityms_exception_config") {
-  cflags_cc = [ "-fexceptions" ]
-}
-
 ohos_unittest("ability_manager_service_test") {
   module_out_path = module_output_path
-  cflags_cc = []
+
   include_dirs = [
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
-    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
-    "${distributedschedule_path}/samgr/adapter/interfaces/innerkits/include/",
-    "${ability_runtime_innerkits_path}/app_manager/include/appmgr",
+    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/include",
+    "${ability_runtime_path}/interfaces/kits/native/ability/ability_runtime/",
+    "${ability_runtime_path}/interfaces/inner_api/ability_manager/include",
     "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include",
-    "${resourceschedule_path}/background_task_mgr/services/transient_task/include",
-    "${ace_engine_path}/frameworks",
-    "${resourceschedule_path}/resource_schedule_service/ressched/interfaces/innerkits/ressched_client/include",
+    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit/include",
     "mock/include",
   ]
 
   sources = [
-    # add mock file
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ability_connect_callback_stub.cpp",
     "ability_manager_service_test.cpp",
     "mock/src/mock_my_flag.cpp",
     "mock/src/mock_permission_verification.cpp",
   ]
 
-  configs = [
-    "${ability_runtime_services_path}/abilitymgr:abilityms_config",
-    "${ability_runtime_services_path}/abilitymgr:abilityms_exception_config",
-  ]
+  configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
 
-  cflags = []
-  if (target_cpu == "arm") {
-    cflags += [ "-DBINDER_IPC_32BIT" ]
-  }
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_start_setting",
-    "${ability_runtime_innerkits_path}/app_manager:app_manager",
-    "${ability_runtime_innerkits_path}/connectionobs_manager:connection_obs_manager",
-    "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:perm_verification",
-    "${ability_runtime_services_path}/common:task_handler_wrap",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit:aakit_mock",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core:appexecfwk_appmgr_mock",
-    "${ability_runtime_test_path}/unittest:abilityms_test_source",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
   ]
 
   external_deps = [
-    "ability_base:configuration",
     "ability_base:session_info",
     "ability_base:want",
     "ability_base:zuri",
-    "ability_runtime:ability_context_native",
+    "ability_runtime:ability_deps_wrapper",
+    "ability_runtime:app_manager",
     "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
-    "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dsoftbus:softbus_client",
     "ffrt:libffrt",
-    "hicollie:libhicollie",
     "hilog:libhilog",
-    "hisysevent:libhisysevent",
-    "hitrace:hitrace_meter",
-    "init:libbeget_proxy",
-    "init:libbegetutil",
     "ipc:ipc_core",
-    "kv_store:distributeddata_inner",
-    "napi:ace_napi",
-    "relational_store:native_dataability",
-    "relational_store:native_rdb",
-    "safwk:system_ability_fwk",
-    "samgr:samgr_proxy",
     "window_manager:scene_session",
   ]
-
-  if (background_task_mgr_continuous_task_enable) {
-    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
-  }
 
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
