--- a/test/unittest/free_install_manager_test/BUILD.gn
+++ b/test/unittest/free_install_manager_test/BUILD.gn
@@ -26,6 +26,8 @@ ohos_unittest("free_install_manager_test") {
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
+    "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:perm_verification",
     "//third_party/googletest:gmock_main",
@@ -35,8 +37,6 @@ ohos_unittest("free_install_manager_test") {
   external_deps = [
     "ability_base:session_info",
     "ability_base:want",
-    "ability_runtime:ability_deps_wrapper",
-    "ability_runtime:app_manager",
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
