--- a/test/unittest/start_option_display_id_test/BUILD.gn
+++ b/test/unittest/start_option_display_id_test/BUILD.gn
@@ -26,6 +26,8 @@ ohos_unittest("start_option_display_id_test") {
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
+    "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:perm_verification",
   ]
@@ -33,8 +35,6 @@ ohos_unittest("start_option_display_id_test") {
   external_deps = [
     "ability_base:session_info",
     "ability_base:want",
-    "ability_runtime:ability_deps_wrapper",
-    "ability_runtime:app_manager",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
