--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -745,6 +745,7 @@ group("extension_blocklist_config") {
 group("extension_module") {
   deps = [
     ":service_extension_module",
+    ":share_extension_module",
     ":ui_extension_module",
   ]
 
@@ -802,6 +803,71 @@ ohos_shared_library("ui_extension_module") {
 
   deps = [
     ":ui_extension",
+    "${ability_runtime_innerkits_path}/runtime:runtime",
+  ]
+
+  external_deps = [
+    "ability_base:configuration",
+    "ability_base:session_info",
+    "ability_base:want",
+    "bundle_framework:appexecfwk_core",
+    "hilog:libhilog",
+    "napi:ace_napi",
+  ]
+
+  relative_install_dir = "extensionability/"
+  subsystem_name = "ability"
+  part_name = "ability_runtime"
+}
+
+config("share_extension_public_config") {
+  visibility = [ ":*" ]
+  include_dirs = [ "${ability_runtime_path}/interfaces/kits/native/ability/native/share_extension_ability" ]
+}
+
+ohos_shared_library("share_extension") {
+  public_configs = [
+    ":share_extension_public_config",
+    ":ui_extension_public_config",
+  ]
+
+  sources = [
+    "${ability_runtime_native_path}/ability/native/share_extension_ability/share_extension.cpp",
+    "${ability_runtime_native_path}/ability/native/share_extension_ability/js_share_extension.cpp",
+  ]
+
+  deps = [
+    ":abilitykit_native",
+    ":ui_extension",
+    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_innerkits_path}/runtime:runtime",
+    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
+    "${ability_runtime_native_path}/ability:ability_context_native",
+    "${ability_runtime_native_path}/ability/native:ability_business_error",
+    "${ability_runtime_native_path}/appkit:app_context",
+  ]
+
+  external_deps = [
+    "ability_base:want",
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "hilog:libhilog",
+    "hitrace:hitrace_meter",
+    "ipc:ipc_napi_common",
+    "napi:ace_napi",
+  ]
+
+  subsystem_name = "ability"
+  part_name = "ability_runtime"
+}
+
+ohos_shared_library("share_extension_module") {
+  sources = [ "${ability_runtime_native_path}/ability/native/share_extension_ability/share_extension_module_loader.cpp" ]
+
+  configs = [ ":ability_config" ]
+
+  deps = [
+    ":share_extension",
     "${ability_runtime_innerkits_path}/runtime:runtime",
   ]
 
