huangshiwei4@huawei.com
Signed-off-by: huangshiwei <huangshiwei4@huawei.com>

--- a/test/moduletest/call_module_test/BUILD.gn
+++ b/test/moduletest/call_module_test/BUILD.gn
@@ -44,6 +44,10 @@ ohos_moduletest("call_ability_service_module_test") {
     "ipc:ipc_core",
     "window_manager:scene_session",
   ]
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("moduletest") {
