--- a/test/unittest/start_option_display_id_test/BUILD.gn
+++ b/test/unittest/start_option_display_id_test/BUILD.gn
@@ -45,6 +45,10 @@ ohos_unittest("start_option_display_id_test") {
     "window_manager:scene_session",
   ]
 
+  if (background_task_mgr_continuous_task_enable) {
+    external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
+  }
+
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
