--- a/test/unittest/ability_manager_service_anr_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_anr_test/BUILD.gn
@@ -65,6 +65,10 @@ ohos_unittest("ability_manager_service_anr_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
