--- a/test/unittest/lifecycle_test/BUILD.gn
+++ b/test/unittest/lifecycle_test/BUILD.gn
@@ -54,6 +54,10 @@ ohos_unittest("lifecycle_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
