--- a/frameworks/js/napi/share_extension_ability/BUILD.gn
+++ b/frameworks/js/napi/share_extension_ability/BUILD.gn
@@ -28,8 +28,8 @@ gen_js_obj("share_extension_ability_js") {
 }
 
 gen_js_obj("share_extension_ability_abc") {
-  input = get_label_info(":gen_share_extension_ability_abc",
-                         "target_out_dir") + "/share_extension_ability.abc"
+  input = get_label_info(":gen_share_extension_ability_abc", "target_out_dir") +
+          "/share_extension_ability.abc"
   output = target_out_dir + "/share_extension_ability_abc.o"
   dep = ":gen_share_extension_ability_abc"
 }
