--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -65,7 +65,6 @@ ohos_shared_library("ability_manager") {
     "${ability_runtime_native_path}/ability/native/data_ability_result.cpp",
     "${ability_runtime_native_path}/ability/native/task_handler.cpp",
     "${ability_runtime_native_path}/ability/native/task_handler_client.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/ability_connect_callback_stub.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_client.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_collaborator_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_proxy.cpp",
@@ -108,6 +107,8 @@ ohos_shared_library("ability_manager") {
     ":ability_manager_public_config",
     "${ability_runtime_services_path}/abilitymgr:abilityms_config",
   ]
+
+  public_deps = [ ":ability_connect_callback_stub" ]
 
   deps = [
     ":ability_start_setting",
@@ -186,6 +187,32 @@ ohos_shared_library("ability_start_setting") {
   public_configs = [ ":ability_manager_public_config" ]
 
   external_deps = [ "c_utils:utils" ]
+
+  cflags_cc = []
+  innerapi_tags = [ "platformsdk" ]
+  subsystem_name = "ability"
+  part_name = "ability_runtime"
+}
+
+ohos_shared_library("ability_connect_callback_stub") {
+  include_dirs = [
+    "include/",
+    "${ability_base_kits_path}/want/include",
+    "${ability_runtime_services_path}/abilitymgr/include",
+    "${ability_runtime_services_path}/common/include",
+  ]
+
+  sources = [ "${ability_runtime_services_path}/abilitymgr/src/ability_connect_callback_stub.cpp" ]
+
+  public_configs = [ ":ability_manager_public_config" ]
+
+  external_deps = [
+    "ability_base:want",
+    "ability_base:zuri",
+    "c_utils:utils",
+    "hilog:libhilog",
+    "ipc:ipc_core",
+  ]
 
   cflags_cc = []
   innerapi_tags = [ "platformsdk" ]
