Description:ability_simulator didn't compiled in img. Sig:SIG_ApplicationFramework Feature or BugFix: Feature Binary Source: No
Signed-off-by: zhangyafei.echo <zhangyafei12@huawei.com>
Change-Id: Ib23135a44030f52bd6379022c7391790864c6e29

--- a/frameworks/simulator/ability_simulator/BUILD.gn
+++ b/frameworks/simulator/ability_simulator/BUILD.gn
@@ -44,7 +44,7 @@ config("ability_simulator_public_config") {
   include_dirs = [ "include" ]
 }
 
-ohos_shared_library("ability_simulator") {
+ohos_shared_library("ability_simulator_inner") {
   if (is_mingw || is_mac) {
     if (is_mingw) {
       defines = [
@@ -111,7 +111,14 @@ ohos_shared_library("ability_simulator") {
     }
   }
 
+  output_name = "ability_simulator"
   innerapi_tags = [ "platformsdk" ]
   part_name = "ability_runtime"
   subsystem_name = "ability"
+}
+
+group("ability_simulator") {
+  if (is_mingw || is_mac) {
+    public_deps = [ ":ability_simulator_inner" ]
+  }
 }
