Add tdd for TaskHandlerWrap
Signed-off-by: wangzhen <wangzhen346@huawei.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -417,6 +417,7 @@ group("unittest") {
     "sys_mgr_client_test:unittest",
     "system_ability_token_callback_stub_test:unittest",
     "task_data_persistence_mgr_test:unittest",
+    "task_handler_wrap_test:unittest",
     "trigger_Info_test:unittest",
     "ui_extension_utils_test:unittest",
     "uri_permission_impl_test:unittest",
