添加永久Uri权限
Signed-off-by: duansizhao <duansizhao@huawei.com>
Change-Id: I94771a480770ef102b4d0fdcaf58663bba59d3fa

--- a/test/unittest/uri_permission_test/BUILD.gn
+++ b/test/unittest/uri_permission_test/BUILD.gn
@@ -36,6 +36,9 @@ ohos_unittest("uri_permission_test") {
     "ability_base:zuri",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
+    "init:libbeget_proxy",
+    "init:libbegetutil",
+    "relational_store:native_rdb",
 
     # "ipc:ipc_core",
     "storage_service:storage_manager_sa_proxy",
