--- a/services/uripermmgr/BUILD.gn
+++ b/services/uripermmgr/BUILD.gn
@@ -17,7 +17,10 @@ import("//foundation/ability/ability_runtime/ability_runtime.gni")
 config("upms_config") {
   visibility = [ ":*" ]
   visibility += [ "${ability_runtime_test_path}/unittest/*" ]
-  include_dirs = [ "include" ]
+  include_dirs = [
+    "include",
+    "include/rdb",
+  ]
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -25,7 +28,9 @@ config("upms_config") {
 }
 
 libupms_sources = [
-  "src/uri_bundle_event_callback.cpp",
+  "src/rdb/ability_rdb_open_callback.cpp",
+  "src/rdb/rdb_data_manager.cpp",
+  "src/rdb/uri_permission_rdb.cpp",
   "src/uri_permission_manager_service.cpp",
   "src/uri_permission_manager_stub_impl.cpp",
 ]
@@ -60,7 +65,10 @@ ohos_shared_library("libupms") {
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
+    "init:libbeget_proxy",
+    "init:libbegetutil",
     "ipc:ipc_core",
+    "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
     "storage_service:storage_manager_sa_proxy",
@@ -96,7 +104,10 @@ ohos_static_library("libupms_static") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "hilog:libhilog",
+    "init:libbeget_proxy",
+    "init:libbegetutil",
     "ipc:ipc_core",
+    "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
     "storage_service:storage_manager_sa_proxy",
