--- a/test/unittest/uri_permission_impl_test/BUILD.gn
+++ b/test/unittest/uri_permission_impl_test/BUILD.gn
@@ -49,6 +49,9 @@ ohos_unittest("uri_permission_impl_test") {
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
+    "init:libbeget_proxy",
+    "init:libbegetutil",
+    "relational_store:native_rdb",
     "storage_service:storage_manager_sa_proxy",
   ]
 }
