--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -327,6 +327,7 @@ group("unittest") {
     "ams_service_event_drive_test:unittest",
     "ams_service_load_ability_process_test:unittest",
     "ams_service_startup_test:unittest",
+    "app_exit_reason_data_manager_test:unittest",
     "app_lifecycle_deal_test:unittest",
     "app_mgr_client_test:unittest",
     "app_mgr_proxy_test:unittest",
