--- a/test/unittest/ability_manager_service_dialog_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_dialog_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("ability_manager_service_dialog_test") {
 
   deps = [
     "${ability_runtime_services_path}/abilitymgr:abilityms",
+    "//foundation/window/window_manager/utils:libwmutil",
     "//third_party/googletest:gtest_main",
   ]
 
@@ -38,6 +39,8 @@ ohos_unittest("ability_manager_service_dialog_test") {
     "common_event_service:cesfwk_innerkits",
     "ffrt:libffrt",
     "hilog:libhilog",
+    "window_manager:libdm",
+    "window_manager:libwm",
   ]
 
   if (ecologic_rule_enabled) {
