--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -41,6 +41,7 @@ hiebpf_path = "//developtools/profiler/hiebpf"
 multimedia_path = "//foundation/multimedia/image_framework"
 multimodalinput_path = "//foundation/multimodalinput/input"
 windowmanager_path = "//foundation/window/window_manager"
+window_base_path = "//foundation/window/window_manager"
 graphic_path = "//foundation/graphic/graphic_2d"
 global_path = "//base/global"
 distributedschedule_path = "//foundation/systemabilitymgr"
