feature:split ace_engine into two parts, libace_ng.z.so for ng,libace.z.so for og
Signed-off-by: mucor <mucorwang@gmail.com>

--- a/interfaces/inner_api/runtime/BUILD.gn
+++ b/interfaces/inner_api/runtime/BUILD.gn
@@ -89,6 +89,7 @@ ohos_shared_library("runtime") {
     "ability_base:string_utils",
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
+    "ace_engine:ace_forward_compatibility",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "bundle_framework:bundle_napi_common",
