--- a/test/fuzztest/pendingwantmanager_fuzzer/BUILD.gn
+++ b/test/fuzztest/pendingwantmanager_fuzzer/BUILD.gn
@@ -46,6 +46,7 @@ ohos_fuzztest("PendingWantManagerFuzzTest") {
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_innerkits_path}/ability_manager:mission_info",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
