--- a/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
@@ -1663,6 +1663,7 @@ ohos_unittest("distributed_client_test") {
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_innerkits_path}/ability_manager:mission_info",
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_native_path}/appkit:app_context",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
