--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -79,10 +79,8 @@ ohos_shared_library("ability_manager") {
     "${ability_runtime_services_path}/abilitymgr/src/image_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/launch_param.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/lifecycle_state_info.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/mission_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/mission_listener_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/mission_listener_stub.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/mission_snapshot.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/prepare_terminate_callback_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/prepare_terminate_callback_stub.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/remote_mission_listener_proxy.cpp",
@@ -112,6 +110,7 @@ ohos_shared_library("ability_manager") {
 
   deps = [
     ":ability_start_setting",
+    ":mission_info",
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "//third_party/jsoncpp:jsoncpp",
   ]
@@ -155,8 +154,10 @@ ohos_shared_library("ability_manager") {
 }
 
 ohos_shared_library("mission_info") {
-  sources =
-      [ "${ability_runtime_services_path}/abilitymgr/src/mission_info.cpp" ]
+  sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/mission_info.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/mission_snapshot.cpp",
+  ]
 
   public_configs = [ ":ability_manager_public_config" ]
 
@@ -165,6 +166,11 @@ ohos_shared_library("mission_info") {
     "c_utils:utils",
     "ipc:ipc_core",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "image_framework:image_native" ]
+  }
+
   cflags_cc = []
   innerapi_tags = [ "platformsdk" ]
   subsystem_name = "ability"
