--- a/test/fuzztest/getmissioninfos_fuzzer/BUILD.gn
+++ b/test/fuzztest/getmissioninfos_fuzzer/BUILD.gn
@@ -40,6 +40,7 @@ ohos_fuzztest("GetMissionInfosFuzzTest") {
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_innerkits_path}/ability_manager:mission_info",
     "//third_party/jsoncpp:jsoncpp",
   ]
 
