--- a/test/unittest/frameworks_kits_ability_ability_runtime_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_ability_runtime_test/BUILD.gn
@@ -40,6 +40,7 @@ ohos_unittest("ability_context_impl_test") {
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_innerkits_path}/ability_manager:mission_info",
     "${ability_runtime_native_path}/ability:ability_context_native",
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
