--- a/test/unittest/task_data_persistence_mgr_test/BUILD.gn
+++ b/test/unittest/task_data_persistence_mgr_test/BUILD.gn
@@ -38,6 +38,7 @@ ohos_unittest("task_data_persistence_mgr_test") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
   }
   deps = [
+    "${ability_runtime_innerkits_path}/ability_manager:mission_info",
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:perm_verification",
