部件化整改
Signed-off-by: 18870373690 <gaolang7@huawei.com>
Change-Id: I18ee47b6cd7daf811ecf0787fc037d1c1cae34be

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -268,7 +268,7 @@ ohos_shared_library("abilitykit_native") {
     "init:libbegetutil",
     "ipc:ipc_core",
     "ipc:ipc_napi_common",
-    "ipc_js:rpc",
+    "ipc:ipc_rpc",
     "napi:ace_napi",
     "relational_store:native_rdb",
     "resource_management:global_resmgr",
