xuzheheng2@huawei.com
Signed-off-by: xuzheheng <xuzheheng2@huawei.com>
Change-Id: I32a46fc8a1822342686b71c08fef6442fb6f865a

--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -178,11 +178,10 @@ ohos_shared_library("appkit_native") {
   }
 
   if (defined(global_parts_info.web_webview)) {
-    deps += [ "${webview_path}/ohos_adapter:nweb_ohos_adapter" ]
-
-    include_dirs += [ "${webview_path}/ohos_adapter/interfaces" ]
-
-    external_deps += [ "webview:libnweb" ]
+    external_deps += [
+      "webview:libnweb",
+      "webview:nweb_ohos_adapter",
+    ]
 
     defines += [ "NWEB" ]
   }
