--- a/test/unittest/ability_manager_service_dialog_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_dialog_test/BUILD.gn
@@ -27,7 +27,7 @@ ohos_unittest("ability_manager_service_dialog_test") {
 
   deps = [
     "${ability_runtime_services_path}/abilitymgr:abilityms",
-    "${window_base_path}/utils:libwmutil",
+    "${windowmanager_path}/utils:libwmutil",
     "//third_party/googletest:gtest_main",
   ]
 
