--- a/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
@@ -2070,6 +2070,7 @@ ohos_unittest("share_extension_module_loader_test") {
     "${ability_runtime_innerkits_path}/runtime:runtime",
     "${ability_runtime_native_path}/ability/native:abilitykit_native",
     "${ability_runtime_native_path}/ability/native:share_extension",
+    "${ability_runtime_native_path}/appkit:app_context",
     "${ability_runtime_native_path}/appkit:appkit_native",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
@@ -2079,6 +2080,7 @@ ohos_unittest("share_extension_module_loader_test") {
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "hilog:libhilog",
+    "ipc:ipc_core",
     "napi:ace_napi",
   ]
 }
