--- a/test/unittest/frameworks_kits_ability_ability_runtime_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_ability_runtime_test/BUILD.gn
@@ -59,6 +59,7 @@ ohos_unittest("ability_context_impl_test") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "window_manager:scene_session",
   ]
 }
 
