--- a/test/unittest/frameworks_kits_appkit_native_test/ability_delegator/BUILD.gn
+++ b/test/unittest/frameworks_kits_appkit_native_test/ability_delegator/BUILD.gn
@@ -144,6 +144,7 @@ ohos_unittest("ability_delegator_unittest") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "window_manager:scene_session",
   ]
 }
 
