huangshiwei4@huawei.com
Signed-off-by: huangshiwei <huangshiwei4@huawei.com>

--- a/test/moduletest/ability_delegator_test/BUILD.gn
+++ b/test/moduletest/ability_delegator_test/BUILD.gn
@@ -193,6 +193,7 @@ ohos_moduletest("ability_delegator_moduletest") {
     "eventhandler:libeventhandler",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "window_manager:scene_session",
   ]
 }
 
