--- a/test/moduletest/ability_test/BUILD.gn
+++ b/test/moduletest/ability_test/BUILD.gn
@@ -85,6 +85,8 @@ ohos_moduletest("ability_moduletest") {
     "relational_store:native_appdatafwk",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
+    "window_manager:libwsutils",
+    "window_manager:scene_session",
   ]
 
   if (ability_runtime_graphics) {
@@ -144,6 +146,8 @@ ohos_moduletest("ability_conetxt_test") {
     "relational_store:native_appdatafwk",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
+    "window_manager:libwsutils",
+    "window_manager:scene_session",
   ]
   if (ability_runtime_graphics) {
     external_deps += [ "input:libmmi-client" ]
@@ -227,6 +231,8 @@ ohos_moduletest("data_ability_operation_moduletest") {
     "relational_store:native_appdatafwk",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
+    "window_manager:libwsutils",
+    "window_manager:scene_session",
   ]
 
   if (ability_runtime_graphics) {
