--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -424,6 +424,7 @@ group("unittest") {
     "ui_extension_utils_test:unittest",
     "uri_permission_impl_test:unittest",
     "uri_permission_manager_test:unittest",
+    "uri_permission_persistable_test:unittest",
     "uri_permission_test:unittest",
     "user_controller_test:unittest",
     "user_event_handler_test:unittest",
