huangshiwei4@huawei.com
Signed-off-by: huangshiwei <huangshiwei4@huawei.com>

--- a/test/unittest/ability_timeout_test/BUILD.gn
+++ b/test/unittest/ability_timeout_test/BUILD.gn
@@ -56,6 +56,5 @@ ohos_unittest("ability_timeout_test") {
 
 group("unittest") {
   testonly = true
-
-  deps = [ ":ability_timeout_test" ]
+  #   deps = [ ":ability_timeout_test" ]
 }
