--- a/frameworks/simulator/common/BUILD.gn
+++ b/frameworks/simulator/common/BUILD.gn
@@ -18,5 +18,6 @@ config("ability_simulator_common_config") {
   include_dirs = [
     "${simulator_path}/common/include",
     "${ability_runtime_services_path}/common/include",
+    "$c_utils_base_path/include",
   ]
 }
