--- a/test/fuzztest/abilitystubstopuser_fuzzer/BUILD.gn
+++ b/test/fuzztest/abilitystubstopuser_fuzzer/BUILD.gn
@@ -64,7 +64,7 @@ ohos_fuzztest("AbilityStubStopUserFuzzTest") {
   }
 
   if (ecologic_rule_enabled) {
-    external_deps += [ "ecological_rule_managerager:erms_client" ]
+    external_deps += [ "ecological_rule_manager:erms_client" ]
   }
 }
 
