--- a/frameworks/simulator/napi_module/configuration_constant/BUILD.gn
+++ b/frameworks/simulator/napi_module/configuration_constant/BUILD.gn
@@ -14,7 +14,7 @@
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
-ohos_shared_library("configurationconstant_napi") {
+ohos_shared_library("configurationconstant") {
   include_dirs = [ "${resource_management_path}/interfaces/inner_api/include" ]
 
   sources = [ "${ability_runtime_napi_path}/configuration_constant/configuration_constant_module.cpp" ]
