--- a/frameworks/simulator/napi_module/ability_constant/BUILD.gn
+++ b/frameworks/simulator/napi_module/ability_constant/BUILD.gn
@@ -14,7 +14,7 @@
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
-ohos_shared_library("abilityconstant_napi") {
+ohos_shared_library("abilityconstant") {
   include_dirs = [
     "${ability_runtime_innerkits_path}/ability_manager/include",
     "${ability_runtime_innerkits_path}/ability_manager/include/continuation",
