--- a/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
@@ -36,6 +36,7 @@ ohos_moduletest("AmsAppRecentListModuleTest") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
+    "safwk:system_ability_fwk",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
