--- a/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_moduletest("AppRunningProcessesInfoModuleTest") {
     "ffrt:libffrt",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
     "window_manager:libwm",
   ]
 
