--- a/test/moduletest/common/ams/ipc_ams_mgr_test/BUILD.gn
+++ b/test/moduletest/common/ams/ipc_ams_mgr_test/BUILD.gn
@@ -44,6 +44,7 @@ ohos_moduletest("AmsIpcAmsmgrModuleTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
     "window_manager:libwm",
   ]
 
