--- a/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
+++ b/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
@@ -33,6 +33,7 @@ ohos_moduletest("AmsAbilityRunningRecordModuleTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
