--- a/test/moduletest/common/ams/app_mgr_service_test/BUILD.gn
+++ b/test/moduletest/common/ams/app_mgr_service_test/BUILD.gn
@@ -45,6 +45,7 @@ ohos_moduletest("AmsAppMgrServiceModuleTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
     "window_manager:libwm",
   ]
 
