--- a/test/moduletest/common/ams/ipc_app_scheduler_test/BUILD.gn
+++ b/test/moduletest/common/ams/ipc_app_scheduler_test/BUILD.gn
@@ -34,6 +34,7 @@ ohos_moduletest("AmsIpcAppSchedulerModuleTest") {
     "bundle_framework:appexecfwk_base",
     "hicollie:libhicollie",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
