--- a/test/moduletest/common/ams/service_app_spawn_client_test/BUILD.gn
+++ b/test/moduletest/common/ams/service_app_spawn_client_test/BUILD.gn
@@ -41,6 +41,7 @@ ohos_moduletest("AmsServiceAppSpawnClientModuleTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
     "window_manager:libwm",
   ]
 
