--- a/test/moduletest/common/ams/service_start_process_test/BUILD.gn
+++ b/test/moduletest/common/ams/service_start_process_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_moduletest("AmsServiceStartModuleTest") {
     "hicollie:libhicollie",
     "hilog:libhilog",
     "ipc:ipc_core",
+    "safwk:system_ability_fwk",
     "window_manager:libwm",
   ]
 
